--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-python ?
-flask ?
-jinja ?
-recipebook ?
+python >= 3.10
+flask >= 2.2
+jinja2 >= 3.1
 
 globalauth ?
-dataengine
-formengine
-themeengine
+dataengine ?
+formengine ?
+themeengine ?
+
+recipes ?
